<resources>
    <string name="app_name">BACTICOUNT</string>
    <string name="action_settings">Settings</string>
    <string name="home_screen_text_view_welcome">Welcome to BACTICOUNT 1.0</string>
    <string name="home_screen_button_start_analysis">Start Bacterial Analysis</string>
    <string name="home_screen_button_start_tutorial">Tutorial / Experimental Setup</string>
    <string name="home_screen_text_view_file_location_instructions">Within ES File Explorer files are found in /Pictures</string>
    <string name="home_screen_text_view_ES_file_viewer">ES File Explorer and OpenCV Manager (tap above to get them, free!) required for viewing BACTICOUNT results and assets</string>
    <string name="home_screen_button_ES_File">ES File Explorer Link</string>
    <string name="home_screen_button_Open_CV">OpenCV Manager Link</string>
    <string name="home_screen_button_Export">How to export results</string>
    <string name="home_screen_button_Privacy_Policy_Button">UCSB Privacy Policy Link</string>
    <string name="title_activity_tutorial1of4">Tutorial1of4</string>
    <string name="tutorial_1of4_button_to_page_2of4">OK, got it! What\'s next?</string>
    <string name="tutorial_1of4_text_view_intructions1"><b>1. Calibrating BACTICOUNT to count bacterial DNA in a blood sample.</b> You\'ll need known concentrations of genomic DNA samples arranged like so on a hotplate: </string>
    <string name="tutorial_1of4_text_view_intructions2"><b>2. </b>Place hotplate under a sealed box with radial UV LED\'s attached to the top and a viewfinder-sized hole for this camera.</string>
    <string name="title_activity_tutorial2of4">Tutorial2of4</string>
    <string name="tutorial_2of4_button_to_page_3of4">Swell, keep it coming &#8230;</string>
    <string name="tutorial_2of4_text_view_intructions3"><b>3.</b> Construct box with dimensions that allow viewfinder to perfectly align with vials on hotplate.</string>
    <string name="tutorial_2of4_text_view_intructions4"><b>4.</b> Attach blue-blocking lens filter to this camera, put phone on box, and prepare tape to secure phone during recording. Proceed to "Start" from the home screen, then "record standard curve".  Follow the instructions until the 70-minute recording is complete.</string>
    <string name="tutorial_3of4_button_to_page_4of4">Aiite. Don\'t bore me to death :P</string>
    <string name="tutorial_3of4_text_view_intructions">5. Now that you\'ve successfully recorded a calibration standard curve, complete the same procedure for a set of unknown live blood samples (still use a [+] and [-] control) by going to "record sample" from "start" on the home screen. After this 70 minute recording is complete, you\'re ready to analyze the results! \n \n <b>6. Using BACTICOUNT to count bacteria in a blood sample.</b> From "start" go to "select and view results".  Here you\'ll be prompted to choose both a calibration (.pasc) and set of unknowns for analysis (.pasc).  Simply select one from the prompted folders of the run names you recorded earlier, and hit "proceed". Results will be displayed, in powers of 10 for each of the 8 unknown vials alongside checks for [+] and [-] controls (required to pass for calibrations and unknown samples). They are exported to the same folder (*_analysis.txt) for viewing or verification, along with raw data from all recordings.</string>
    <string name="tutorial_4of4_button_to_home_screen">Rock on!</string>
    <string name="tutorial_4of4_text_view_intructions7"><b>7. </b>Much more detailed instructions can be found at [link to BACTICOUNT.com- available! we should register it]. <b>Note: installation of "Open CV manager" will be prompted during the process. Play Store access is required to install, necessary for proper BACTICOUNT operation (You will leave and re-enter BACTICOUNT).</b> Here is a list of needed supplies</string>
    <string name="tutorial_4of4_text_view_intructions8">\n<b>Reagents</b> \n-Blood lysis: alkaline reagent (NaOH, Triton X-100) \n-Tris-HCl (pH 7.5) \n\n<b>Amplification:</b>\n-positive control containing target gene (genomic DNA)\n-primers (F3, B3, FIP, BIP, with optional addition of F Loop and B Loop)\n-2x reagent mix (<i>Bst</i> DNA polymerase, Tris-HCl, KCl, MgSO<sub>4</sub>, (NH<sub>4</sub>)<sub>2</sub>SO<sub>4</sub>, Tween-20, Triton X-100, betaine, dNTPs, FDR)\n-PCR-clean H<sub>2</sub>O\n\n<b>Materials</b>\n-sterilized tubes\n-aluminum 96-well tube holder\n-smartphone with app\n-520 nm optical filter\n-tape\n-low-profile strip PCR tubes\n-optical flat strip PCR lids\n-micropipette\n-pipette tips with filter\n-vortex mixer\n-centrifuge\n-ice\n-heat block\n-blue LED lights\n-battery\n-blackout box with viewing aperture\n-Moto X 2nd Gen in airplane mode\n\n<b>Predetermined Parameters</b>\n-primers for target gene\n-concentration of positive control\n-temperature for amplification\n </string>
    <string name="title_activity_tutorial3of4">Tutorial3of4</string>
    <string name="title_activity_tutorial4of4">Tutorial4of4</string>
    <string name="recording_reaction_button_cancel"><b>does nothing :D</b></string>
    <string name="recording_reaction_text_view_time_lapsed">Seconds remaining:</string>
    <string name="recording_reaction_text_view_time_left">dummy</string>
    <string name="recording_reaction_text_view_recording_now"><b>NOW RECORDING. Do not move device, tap any buttons, unplug power, or respond to notifications.</b></string>
    <string name="recording_reaction_text_view_top_message">Snapping 1 photo every 10 seconds for 50 minutes, 300 photos total.</string>
    <string name="recording_reaction_chronometer_dummy">This will not actually be displayed</string>
    <string name="title_activity_prepare_recording">PrepareRecording</string>
    <string name="prepare_recording_text_view_top_message">Aim camera directly at reaction vials and line up to grid as carefully as possible. Place camera in stable position on box and hit record. Ensure that the camera WILL NOT MOVE during recording.  Before recording begins, it is required that the user close all applications except Bacticount, else results cannot be guaranteed.  Device must be left in an undisturbed state during recording.  Device <b><i><u>MUST be put in airplane mode, else may fail.</u></i></b>. The phone ceases to be a phone and becomes a scientific instrument and should be treated as such during recording.</string>
    <string name="prepare_recording_button_start_recording_reaction">Begin Recording Amplification</string>
    <string name="prepare_recording_viewfinder_grid_image_description">This is the exact grid the vials will need to be aligned to</string>
    <string name="prepare_recording_text_view_timer_indicator">Offset Time:</string>
    <string name="prepare_recording_chronometer_dummy">This will not actually be displayed</string>
    <string name="image_description_sample_cam_view">Merely a sample of what the viewfinder will actually look like</string>
    <string name="title_activity_recording_reaction">RecordingReaction</string>
    <string name="title_activity_reaction_results">ReactionResults</string>
    <string name="reaction_results_button_home">Back To Home</string>
    <string name="reaction_results_text_view_top_message">The positive (+) and negative (-) indicate success of a sample if both are marked YES.  Bottom 2 rows show the initial concentration, in powers of 10 of the bacterial concentration.  For example, if one shows 3.14, this indicates there is 1 x 10^3.14 bacteria per milliliter in that vial sample.</string>
    <string name="image_description_sample_results">This is what the results might look like</string>
    <string name="title_activity_choose_action">ChooseAction</string>
    <string name="choose_action_text_view_top_message">Please choose a bacterial count analysis step. They should be completed in order, but after standard curve and sample have been recorded, analysis may be repeated.</string>
    <string name="choose_action_button_record_standard_curve">1.  Record Standard Curve</string>
    <string name="choose_action_button_view_standard_curve">Select Standard Curve</string>
    <string name="choose_action_button_record_sample">2.  Record Sample</string>
    <string name="choose_action_button_view_sample">Select Sample</string>
    <string name="choose_action_button_back">Back</string>
    <string name="choose_action_button_proceed_results">3.  Select and view results</string>
    <string name="choose_action_demo_working_features_message">AS OF RIGHT NOW, ONLY THE "RECORD STANDARD CURVE"; BUTTON WORKS. That and the back button&#8230;</string>
    <string name="dialog_choose_action_record_standard_curve_message">Enter a name of this standard curve for recording. Only the characters Aa&#8211;Zz, 0&#8211;9, and the underscore symbol (_) are allowed, no periods (.), special characters, or spaces please!  Press OK <u>immediately after loading vials.</u>  <i>If not ready, please press cancel and refer to tutorial.</i>  <b>Timing is critical for this step.</b></string>
    <string name="dialog_choose_action_record_reaction_message">Enter a name of this sample for recording. Only the characters Aa&#8211;Zz, 0&#8211;9, and the underscore symbol (_) are allowed, no periods (.), special characters, or spaces please!  Press OK <u>immediately after loading vials.</u>  <i>If not ready, please press cancel and refer to tutorial.</i>  <b>Timing is critical for this step.</b></string>
    <string name="testing_purposes_only">This field is for testing and debugging</string>
    <string name="title_activity_choose_reference_file">ChooseReferenceFile</string>
    <string name="choose_reference_file_text_view_instructions">Analyze a set of unknown samples (.parr) against a calibrated standard curve (.pasc).  Such files are located in the "Pictures" directory in their corresponding recording folder.</string>
    <string name="choose_reference_file_button_proceed">Run BACTICOUNT analysis!</string>
    <string name="choose_reference_file_button_select_PASC_file">Select \".pasc\" file</string>
    <string name="choose_reference_file_button_select_PARR_file">Select \".parr\" file</string>
    <string name="no_file_selected_pasc">No \".pasc\" file selected</string>
    <string name="no_file_selected_parr">No \".parr\" file selected</string>
    <string name="title_activity_open_cvtest">OpenCVTest</string>
    <string name="yxA1">0.A1</string>
    <string name="yxA2">0.A2</string>
    <string name="yxA3">0.A3</string>
    <string name="yxA4">0.A4</string>
    <string name="yxA5">0.A5</string>
    <string name="yxA6">0.A6</string>
    <string name="yxB1">0.B1</string>
    <string name="yxB2">0.B2</string>
    <string name="yxB3">0.B3</string>
    <string name="yxB4">0.B4</string>
    <string name="yxB5">0.B5</string>
    <string name="yxB6">0.B6</string>
    <string name="yxC1">0.C1</string>
    <string name="yxC2">0.C2</string>
    <string name="yxC3">0.C3</string>
    <string name="yxC4">0.C4</string>
    <string name="yxC5">0.C5</string>
    <string name="yxC6">0.C6</string>
    <string name="yxD1">0.D1</string>
    <string name="yxD2">0.D2</string>
    <string name="yxD3">0.D3</string>
    <string name="yxD4">0.D4</string>
    <string name="yxD5">0.D5</string>
    <string name="yxD6">0.D6</string>
    <string name="yxE1">0.E1</string>
    <string name="yxE2">0.E2</string>
    <string name="yxE3">0.E3</string>
    <string name="yxE4">0.E4</string>
    <string name="yxE5">0.E5</string>
    <string name="yxE6">0.E6</string>
    <string name="yxF1">0.F1</string>
    <string name="yxF2">0.F2</string>
    <string name="yxF3">0.F3</string>
    <string name="yxF4">0.F4</string>
    <string name="yxF5">0.F5</string>
    <string name="yxF6">0.F6</string>
    <string name="openCVTestButtonTestResults">test the results</string>
    <string name="view_finder_description">View Finder Description</string>
    <string name="prepare_recording_button_tap_to_focus">Tap To Focus</string>
</resources>