<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"   
    tools:context=".PrepareRecording" >

    <com.garynfox.pathogenanalyzer.CameraPreview
      android:id="@+id/camera_preview"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent" />
    
    <TextView
        android:id="@+id/prepareRecordingTextViewTopMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
 		android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="25dp"
        android:layout_gravity="top|center_horizontal"
        android:text="@string/prepare_recording_text_view_top_message"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFF00"
        android:textSize="12sp" />

    <!--  
    <ImageView
        android:id="@+id/prepareRecordingImageViewSampleCamView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/prepareRecordingTextViewTopMessage"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/image_description_sample_cam_view" 
        android:src="@drawable/samplecamview"/>
        -->
       
    <Button
        android:id="@+id/prepareRecordingButtonStartRecordingReaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="60dp"
        android:textColor="#00CC33"
        android:text="@string/prepare_recording_button_start_recording_reaction" />

    <TextView
        android:id="@+id/textViewTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textSize="12sp"/>

    <ImageView
        android:id="@+id/prepareRecordingImageViewFinder"
        android:contentDescription="@string/view_finder_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/view_finder_motox2014" />

    <Button
        android:id="@+id/prepareRecordingButtonFocusImage"
        style="android:buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="120dp"
        android:text="@string/prepare_recording_button_tap_to_focus"
        android:textSize="40sp"
        android:textColor="#7B68EE" />

</FrameLayout>
